# auto-crop

./: README.md  environment.yml  pyproject.toml  setup.py
auto_crop/: image.py  main.py
tests/: test_image.py
